--- a/profile.html
+++ b/profile.html
@@ -192,7 +192,7 @@
         <!-- Нижняя навигация -->
     <div class="nav-container">
         <nav class="nav-bar">
-            <a href="index.html" class="nav-item active">
+            <a href="login.html" class="nav-item active">
                 <span class="nav-icon">🖨️</span>
                 <span>Главная</span>
             </a>
