--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="password" id="password" placeholder="Пароль" required>
                 </div>
                 <div class="button-group">
-                    <button onclick="window.location.href='index.html'" class="login-btn">Войти</button>
+                    <button onclick="window.location.href='login.html'" class="login-btn">Войти</button>
                     <button class="register-btn" id="open-register-modal">Регистрация</button>
                 </div>
             </div>
