--- a/login.html
+++ b/login.html
@@ -143,7 +143,7 @@
  <!-- Нижняя навигация -->
     <div class="nav-container">
         <nav class="nav-bar">
-            <a href="login.html" class="nav-item active">
+            <a href="home.html" class="nav-item active">
                 <span class="nav-icon">🖨️</span>
                 <span>Главная</span>
             </a>
