--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
             <!-- Шапка профиля -->
             <div class="profile-header">
                 <button id="back-btn" class="back-button">←</button>
-                <div class="profile-avatar">ИК</div>
+                <div class="profile-avatar"></div>
                 <div class="profile-info-card">
                     <div class="profile-info-header">
                         <h1 class="profile-name">Иван Козлов</h1>
