--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
                         <img src="https://img.hhcdn.ru/employer-logo/7041738.png" alt="ИТ" height="50px" width="50px">
                     </div>
                     <div class="company-info">
-                        <h3>ИсраТек</h3>
+                        <h3>Исратэк</h3>
                         <p>Ведущий производитель самоклеящихся этикеток в России.</p>
                     </div>
                 </div>
